--- a/src/css/CompanyDetail.css
+++ b/src/css/CompanyDetail.css
@@ -1,5 +1,16 @@
-.companyDetail{
+.chart{
+  font-family: "Abel";
+  width: 100%;
+}
+
+.chart-container{
+  width: 100%;
   text-align: center;
+}
+
+.loader {
+  line-height: 200px;
+  margin: 0 auto;
 }
 
 .MuiFormGroup-root{
@@ -13,4 +24,21 @@
 .MuiFormControlLabel-labelPlacementBottom{
   padding: 0 !important;
   margin: 0 !important;
+}
+
+.stock-info-title{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.chart-statistic-container{
+  width: 100%;
+}
+
+/* screen size 0 ~ 500px mobile */
+@media (max-width: 500px) {
+  .chart {
+    width: 98%;
+    display: block;
+  }
 }
