--- a/src/css/FilterSearch.css
+++ b/src/css/FilterSearch.css
@@ -1,15 +1,7 @@
-.filter {
-  width: 20%;
-  height: 100%;
-}
-
 .filter-container{
-  padding: 20px;
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.15);
-  overflow: scroll;
-  height: 500px;
+  margin-top: 60px;
+  margin-left: 10px;
 }
-
 h4{
   margin-bottom: 10px;
 }
