--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -2,61 +2,55 @@
   width: 80%;
   height: 100%;
   float: right;
+  display: flex;
 }
 
-.search-top {
-  background: #fff;
+.search-input {
   height: 60px;
-  width: 70%;
+  width: 100%;
   /* box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1); */
   /* to make input and a vertically center*/
   display: flex;
 }
 
-.search-top input {
-  border: 1px solid #d3d3d3;
-  width: 640px;
+.search-input input {
+  /* width: 600px; */
   height: 38px;
   border-radius: 30px;
   box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.15);
   font-size: 100%;
   padding: 0 58px 0 28px;
-  margin-left: 30px;
 }
 
-.search-top input:focus {
+.search-input input:focus {
   /* to disable blue border when clicked*/
   outline: none;
 }
 
-.search-top img {
+.search-input img {
   width: 30px;
   height: 38px;
   margin-left: 20px;
   margin-top: 5px;
 }
 
-.search-top img:hover {
+.search-input img:hover {
   cursor: pointer;
 }
 
-.search-bottom {
-  width: 100%;
-  height: 100%;
-  /* to make div side by side*/
-  display: flex;
-}
-
-.search-bottom-left {
+.search-left {
   width: 55%;
-  height: 500px;
-  overflow-y: auto;
-  padding: 20px;
 }
 
-.search-bottom-right {
+.search-list{
+  width: 100%;
+  height: 600px;
+  overflow-y: auto;
+}
+.search-right {
+  margin-top: 60px;
   width: 45%;
-  height: 500px;
+  height: 600px;
   font-size: 16px;
   position: sticky;
   display: inline-block;
@@ -73,16 +67,16 @@
     right margin is 15px
     bottom margin is 15px
     left margin is 15px
+    margin: 35px 15px 0px 15px;
   */
-  margin: 35px 15px 0px 15px;
+  margin-left: 15px;
+  
 }
 
 .search-element {
   height: 200px;
   border-radius: 20px;
-  margin: 15px;
-  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
+  margin-bottom: 15px;
   -webkit-transition: all 300ms ease;
   -o-transition: all 300ms ease;
   transition: all 300ms ease;
