--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -1,10 +1,9 @@
 .section {
   overflow: hidden;
   width: 90%;
-  /* padding: 2%; */
   margin: 0 auto;
   text-align: center;
-  margin-top: 100px;
+  height: auto;
 }
 
 @media (max-width: 1220px) {
