--- a/src/css/Article.css
+++ b/src/css/Article.css
@@ -1,17 +1,14 @@
 .article {
   width: 100%;
-  height: 300px;
-  /* margin-top: 80px; */
+  height: auto;
 }
 
 .article-image {
   width: 30%;
-  height: 300px;
   float: right;
 }
 
 .article-description {
-  height: 300px;
   font-family: "Abel";
   text-align: left;
 }
