--- a/src/css/CompanyDetail.css
+++ b/src/css/CompanyDetail.css
@@ -34,6 +34,10 @@
   margin-bottom: 20px;
 }
 
+.MuiIconButton-edgeStart{
+  margin: 0 !important;
+}
+
 .chart-statistic-container{
   width: 100%;
   height: 100%;
