--- a/src/css/FilterSearch.css
+++ b/src/css/FilterSearch.css
@@ -1,6 +1,11 @@
+.filter-search-container{
+  display: flex;
+}
+
 .filter-container{
-  margin-top: 60px;
-  margin-left: 10px;
+  width: 250px;
+  margin: 0 auto;
+  padding-right: 10px;
 }
 
 h4{
@@ -8,11 +13,48 @@ h4{
 }
 
 .filter-types{
-  width: 100%;
+  width: 95%;
+  margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .filter-sectors{
-  width: 100%;
+  width: 95%;
   margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* left drawer */
+.list-drawer-button{
+  display: none;
+  width: 30px;
+  height: 30px;
+  box-shadow: none !important;
+  background-color: transparent !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  border-radius: 0 !important;
+  /* remove default blue background color when button is clicked*/
+  border: none;
+  outline: 0 !important;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.list-drawer-button:hover{
+  background-color: lightgray !important;
+}
+
+.list-image{
+  width: 20px;
+  height: 20px;
+}
+
+@media(max-width: 1200px){
+  /* right-drawer */
+  .list-drawer-button{
+    display: block;
+  }
 }
