--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -19,7 +19,8 @@
   overflow-y: auto;
 }
 .search-right{
-  margin-top: 60px;
+  padding: 15px;
+  margin-top: 80px;
   width: 45%;
   height: 600px;
   font-size: 16px;
@@ -51,7 +52,7 @@ button{
 .search-element {
   height: 200px;
   border-radius: 20px;
-  margin-bottom: 15px;
+  margin: 10px 10px 10px 10px;
   -webkit-transition: all 300ms ease;
   -o-transition: all 300ms ease;
   transition: all 300ms ease;
