--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -11,11 +11,12 @@
 
 .search-left {
   width: 55%;
+  height: 80%;
 }
 
 .search-list{
   width: 100%;
-  height: 600px;
+  min-height: 80%;
   overflow-y: auto;
 }
 .search-right{
