--- a/src/css/CompanyValue.css
+++ b/src/css/CompanyValue.css
@@ -5,11 +5,17 @@
 
 .analysis-title {
   margin-bottom: 10px;
+  margin-right: 15px;
+  display: inline;
 }
 
 .analysis-info ul {
   padding-left: 20px;
   font-size: 18;
+}
+
+.retention {
+  display: inline;
 }
 
 .analysis-info li > h5 {
