--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -15,14 +15,16 @@
 
 .search-list{
   width: 100%;
-  height: 600px;
+  height: calc(100vh - 70px);
   overflow-y: auto;
+  
 }
 .search-right{
   padding: 15px;
   margin-top: 80px;
   width: 45%;
-  height: 600px;
+  height: calc(100vh - 100px);
+  /* height: 600px; */
   font-size: 16px;
   position: sticky;
   display: inline-block;
