--- a/src/css/Review.css
+++ b/src/css/Review.css
@@ -100,7 +100,7 @@ button:hover {
 .feedback-element {
   margin: 0 auto;
   display: flex;
-  height: 200px;
+  height: 120px;
   border-radius: 20px;
   margin: 10px 10px 10px 10px;
   -webkit-transition: all 300ms ease;
@@ -109,8 +109,9 @@ button:hover {
   font-family: "Abel";
   padding: 0 !important;
   overflow: hidden;
-  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.15),
-    0 5px 15px 0 rgba(0, 0, 0, 0.08);
+  border-width: 0.3px;
+  border-color: gray;
+  border-style: solid;
 }
 
 .feedback-element:hover {
@@ -130,14 +131,86 @@ button:hover {
 
 .feedback-right {
   width: 85%;
-  background-color: yellow;
 }
 
 .feedback-user-image {
-  height: 200px;
-  
+  height: 120px;
 }
 
-@media(max-width: 1200px){
+.feedback-right-header {
+  height: 25px;
+}
 
+.feedback-right-main {
+  height: 55px;
+  overflow-y: auto;
+}
+
+.feedback-right-footer {
+  height: 25px;
+}
+
+.header-name {
+  float: left;
+  color: #2f84ed;
+}
+
+.header-date {
+  float: right;
+  color: #6a6c77;
+}
+
+.was-this-helpful {
+  color: #6a6c77;
+  font-size: 13px;
+  float: left;
+  margin-top: 5px;
+}
+
+.thumbs-container {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.thumbs-up {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.thumbs-down {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.was-this-helpful-images {
+  padding-top: 10px;
+  padding-left: 5px;
+}
+.thumbs-count {
+  color: #6a6c77;
+  font-size: 13px;
+  margin-left: 10px;
+}
+
+table,
+tbody {
+  border: none !important;
+}
+
+@media (max-width: 1200px) {
+  .review-container {
+    margin: 0 auto;
+    width: 90%;
+    height: 90%;
+    display: unset;
+  }
+
+  .review-left {
+    width: 100%;
+  }
+
+  .review-right {
+    margin: 0 auto;
+    width: 90%;
+  }
 }
